update: changes for new feature/fix

--- a/src/app/pages/about-details/about-details.component.html
+++ b/src/app/pages/about-details/about-details.component.html
@@ -7,7 +7,7 @@
 
     <div class="lead">
       <p>Welcome to Ujwal Academy. Kickstart your career with our job-ready, mentor-led programs in Full
-        Stack Development and Data/Cloud. Since 2010+, we’ve helped learners become industry-ready with
+        Stack Development and Data/Cloud. Since we are established, we’ve helped learners become industry-ready with
         practical, project-driven training.</p>
 
       <p>Our comprehensive programs equip you with the latest skills and hands-on experience in real-world
