--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -18,12 +18,13 @@
         <li class="nav-item">
           <a class="nav-link"
              routerLink="/"
+             data-bs-toggle="collapse" data-bs-target=".navbar-collapse.show"
              routerLinkActive="active"
              [routerLinkActiveOptions]="{ exact: true }">Home</a>
         </li>
-        <li class="nav-item"><a class="nav-link" routerLink="/all-courses" routerLinkActive="active">Courses</a></li>
-        <li class="nav-item"><a class="nav-link" routerLink="/our-teams-detail" routerLinkActive="active">Our-Teams</a></li>
-        <li class="nav-item"><a class="nav-link" routerLink="/about-details" routerLinkActive="active">About</a></li>
+        <li class="nav-item"><a class="nav-link" routerLink="/all-courses" data-bs-toggle="collapse" data-bs-target=".navbar-collapse.show" routerLinkActive="active">Courses</a></li>
+        <li class="nav-item"><a class="nav-link" routerLink="/our-teams-detail" data-bs-toggle="collapse" data-bs-target=".navbar-collapse.show" routerLinkActive="active">Our-Teams</a></li>
+        <li class="nav-item"><a class="nav-link" routerLink="/about-details" data-bs-toggle="collapse" data-bs-target=".navbar-collapse.show" routerLinkActive="active">About</a></li>
         <!-- <li class="nav-item"><a class="nav-link" routerLink="/branches" routerLinkActive="active">Branches</a></li>
         <li class="nav-item"><a class="nav-link" routerLink="/blog" routerLinkActive="active">Blog</a></li> -->
       </ul>
