--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,6 +5,7 @@
     <main class="container py-2" class="main-container">
       <router-outlet></router-outlet>
     </main>
+    <app-offer-modal></app-offer-modal>
     <app-back-to-top></app-back-to-top>
     <app-social-bar></app-social-bar>
     <app-footer></app-footer>
